@@ -4,7 +4,7 @@
 # You can obtain one at http://mozilla.org/MPL/2.0/.
 #
 # The Initial Developer of the Original Code is the Mozilla Foundation.
-# Portions created by the Initial Developer are Copyright (C) 2012
+# Portions created by the Initial Developer are Copyright (C) 2012-2014
 # the Initial Developer. All Rights Reserved.
 #
 # Contributor(s):
@@ -93,10 +93,7 @@ func NagiosOutputSpec(c gs.Context) {
 				reqWg.Done()
 			})
 
-			go func() {
-				e := http.Serve(listener, mux)
-				c.Assume(e, gs.Not(gs.IsNil))
-			}()
+			go http.Serve(listener, mux)
 
 			c.Specify("sends a valid HTTP POST", func() {
 				err = output.Init(config)
