@@ -4,7 +4,7 @@
 # You can obtain one at http://mozilla.org/MPL/2.0/.
 #
 # The Initial Developer of the Original Code is the Mozilla Foundation.
-# Portions created by the Initial Developer are Copyright (C) 2012
+# Portions created by the Initial Developer are Copyright (C) 2012-2014
 # the Initial Developer. All Rights Reserved.
 #
 # Contributor(s):
@@ -29,8 +29,11 @@ func ProcessChainSpec(c gs.Context) {
 
 	readCommandOutput := func(reader io.Reader, resultChan chan string) {
 		data, err := ioutil.ReadAll(reader)
-		c.Expect(err, gs.IsNil)
-		resultChan <- string(data)
+		if err != nil {
+			resultChan <- fmt.Sprintf("TESTERROR: %s", err.Error())
+		} else {
+			resultChan <- string(data)
+		}
 	}
 
 	c.Specify("A ManagedCommand", func() {
@@ -58,7 +61,8 @@ func ProcessChainSpec(c gs.Context) {
 			go readCommandOutput(cmd.Stdout_r, output)
 			cmd.Wait()
 			end := time.Now()
-			<-output
+			outputStr := <-output
+			c.Expect(strings.HasPrefix(outputStr, "TESTERROR"), gs.IsFalse)
 			actualDuration := end.Sub(start)
 			c.Expect(actualDuration < time.Second*10, gs.Equals, true)
 		})
@@ -77,7 +81,9 @@ func ProcessChainSpec(c gs.Context) {
 
 			// Error messages will vary platform to platform, just check that
 			// there is some message which will be about "No such file found".
-			c.Expect(len(<-stderrResults) > 0, gs.Equals, true)
+			errOutput := <-stderrResults
+			c.Expect(len(errOutput) > 0, gs.Equals, true)
+			c.Expect(strings.HasPrefix(errOutput, "TESTERROR"), gs.IsFalse)
 			c.Expect(<-stdoutResults, gs.Equals, "")
 		})
 
