@@ -7,6 +7,8 @@ Backwards Incompatibilities
 Bug Handling
 ------------
 
+* Fixed lots of race conditions in the tests.
+
 Features
 --------
 
